@@ -123,26 +123,6 @@
         </plugins>
     </build>
 
-
-    <profiles>
-        <profile>
-            <id>enable-preview-features</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.8.1</version>
-                        <configuration>
-                            <release>${compiler.version}</release>
-                            <compilerArgs>--enable-preview</compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
     <distributionManagement>
         <repository>
             <id>repsy</id>
